cicd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cicd
  name: cicd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cicd
  strategy: {}
  template:
    metadata:
      labels:
        app: cicd
    spec:
      containers:
      - image: vinsdocker/docker-ci-cd
        name: docker-ci-cd
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cicd
    app.kubernetes.io/instance: vinsguru
  name: cicd
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cicd
  type: NodePort
